# wasmtime

./: Cargo.toml
cranelift/: Cargo.toml
cranelift/assembler-x64/meta/src/: instructions.rs
cranelift/assembler-x64/meta/src/dsl/: encoding.rs  features.rs  format.rs
cranelift/assembler-x64/meta/src/generate/: format.rs  inst.rs  operand.rs
cranelift/assembler-x64/meta/src/instructions/: avx512.rs
cranelift/assembler-x64/src/: api.rs  evex.rs  features.rs  fuzz.rs  inst.rs  kmask.rs  lib.rs  mem.rs  xmm.rs
cranelift/codegen/: Cargo.toml
cranelift/codegen/meta/src/: gen_asm.rs  gen_isle.rs  isle.rs
cranelift/codegen/meta/src/isa/: x86.rs
cranelift/codegen/meta/src/shared/: formats.rs  instructions.rs  settings.rs
cranelift/codegen/src/: isle_prelude.rs  opts.rs  prelude.isle  prelude_opt.isle  settings.rs  write.rs
cranelift/codegen/src/ir/: instructions.rs
cranelift/codegen/src/isa/aarch64/: abi.rs  lower.isle
cranelift/codegen/src/isa/pulley_shared/: abi.rs
cranelift/codegen/src/isa/riscv64/: abi.rs
cranelift/codegen/src/isa/s390x/: abi.rs  lower.isle
cranelift/codegen/src/isa/x64/: abi.rs  inst.isle  lower.isle  lower.rs  mod.rs  pcc.rs
cranelift/codegen/src/isa/x64/inst/: args.rs  emit.rs  external.rs  mod.rs  regs.rs
cranelift/codegen/src/isa/x64/inst/avx512/: UPSTREAM_PROGRESS.md  defs.rs  emit.rs  encoding.rs  mod.rs  regs.rs
cranelift/codegen/src/isa/x64/inst/unwind/: systemv.rs  winx64.rs
cranelift/codegen/src/isa/x64/lower/: isle.rs
cranelift/codegen/src/isa/x64/lower/isle/: avx512.isle
cranelift/codegen/src/machinst/: abi.rs  isle.rs  lower.rs  vcode.rs
cranelift/codegen/src/opts/: cprop.isle
cranelift/codegen/src/verifier/: mod.rs
cranelift/filetests/filetests/egraph/: cprop.clif
cranelift/filetests/filetests/isa/x64/: avx512-abi-unsupported.clif  avx512-abi.clif  avx512-bitops-lanes.clif  avx512-clobbers.clif  avx512-fp-semantics.clif  avx512-gather-scatter.clif  avx512-libcall-fastcall-unsupported.clif  avx512-preserve-all.clif  avx512-signature-no-flags-unsupported.clif  avx512-ternlog.clif  avx512-unsupported-no-flags.clif  avx512-unsupported.clif  avx512-vp2intersect.clif  avx512.clif  fastcall-wide-vectors-unsupported.clif  fcvt-simd.clif  icmp-i8x64-avx512.clif  simd-i64x2-shift-avx512.clif  uunarrow-narrowing.clif
cranelift/filetests/filetests/parser/: simd-avx512-mem.clif
cranelift/filetests/filetests/runtests/: simd-fcvt-from-uint.clif  simd-sshr.clif  simd-swizzle-wide-lanes.clif
cranelift/filetests/filetests/runtests/x64/: avx512-db-stress.clif  avx512-fp-semantics.clif  avx512-i8x64.clif  avx512-mask-ops.clif  avx512-regpressure.clif
cranelift/filetests/filetests/verifier/: simd-avx512-mem.clif
cranelift/interpreter/src/: step.rs
cranelift/isle/isle/: Cargo.toml
cranelift/isle/veri/veri_engine/: Cargo.toml
cranelift/isle/veri/veri_engine/src/: solver.rs
cranelift/jit/: Cargo.toml
cranelift/jit/src/: backend.rs  lib.rs
cranelift/jit/src/memory/: arena.rs  mod.rs  system.rs
cranelift/jit/tests/: avx512_bitops_lanes.rs  avx512_e2e.rs  avx512_fp_semantics.rs  avx512_gather_dq.rs  avx512_lanemask_regression.rs  avx512_perf.rs  avx512_scatter_offset.rs  avx512_sql_ops.rs  avx512_ternlog.rs  avx512_vp2intersect.rs
cranelift/native/src/: lib.rs
cranelift/reader/src/: parser.rs
crates/cache/: Cargo.toml
crates/cranelift/src/: compiler.rs
crates/cranelift/src/debug/transform/: mod.rs
crates/jit-icache-coherence/: Cargo.toml
crates/jit-icache-coherence/src/: lib.rs  libc.rs  miri.rs
crates/wasmtime/src/: config.rs  engine.rs
