[profile.release.build-override]
opt-level = 0

[workspace]
resolver = '2'
members = [
  "cranelift",
  "cranelift/assembler-x64/fuzz",
  "cranelift/isle/fuzz",
  "cranelift/isle/islec",
  "cranelift/isle/veri/veri_engine",
  "cranelift/isle/veri/veri_ir",
  "cranelift/serde",
]
exclude = [
  'docs/rust_wasi_markdown_parser',
]

[workspace.package]
version = "41.0.0"
authors = ["The Wasmtime Project Developers"]
edition = "2024"
# Wasmtime's current policy is that this number can be no larger than the
# current stable release of Rust minus 2.
rust-version = "1.90.0"

[workspace.lints.rust]
# Turn on some lints which are otherwise allow-by-default in rustc.
unused_extern_crates = 'warn'
trivial_numeric_casts = 'warn'
unstable_features = 'warn'
unused_import_braces = 'warn'
unused-lifetimes = 'warn'
unused-macro-rules = 'warn'

# Don't warn about unknown cfgs for pulley
[workspace.lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = [
  'cfg(pulley_tail_calls)',
  'cfg(pulley_assume_llvm_makes_tail_calls)',
  'cfg(pulley_disable_interp_simd)',
]

[workspace.lints.clippy]
# The default set of lints in Clippy is viewed as "too noisy" right now so
# they're all turned off by default. Selective lints are then enabled below as
# necessary.
all = { level = 'allow', priority = -1 }
clone_on_copy = 'warn'
map_clone = 'warn'
uninlined_format_args = 'warn'
unnecessary_to_owned = 'warn'
manual_strip = 'warn'
useless_conversion = 'warn'
unnecessary_mut_passed = 'warn'
unnecessary_fallible_conversions = 'warn'
unnecessary_cast = 'warn'
allow_attributes_without_reason = 'warn'
from_over_into = 'warn'
redundant_field_names = 'warn'
multiple_bound_locations = 'warn'
extra_unused_type_parameters = 'warn'

[workspace.dependencies]
# Cranelift support crates kept from Wasmtime.
wasmtime-jit-icache-coherence = { path = "crates/jit-icache-coherence", version = "=41.0.0", package = 'wasmtime-internal-jit-icache-coherence' }
wasmtime-math = { path = "crates/math", version = "=41.0.0", package = 'wasmtime-internal-math' }
wasmtime-unwinder = { path = "crates/unwinder", version = "=41.0.0", package = 'wasmtime-internal-unwinder' }

pulley-interpreter = { path = 'pulley', version = "=41.0.0" }
pulley-macros = { path = 'pulley/macros', version = "=41.0.0" }

# Cranelift crates in this workspace
cranelift-assembler-x64 = { path = "cranelift/assembler-x64", version = "0.128.0" }
cranelift-codegen = { path = "cranelift/codegen", version = "0.128.0", default-features = false, features = ["std", "unwind"] }
cranelift-frontend = { path = "cranelift/frontend", version = "0.128.0" }
cranelift-entity = { path = "cranelift/entity", version = "0.128.0" }
cranelift-native = { path = "cranelift/native", version = "0.128.0" }
cranelift-module = { path = "cranelift/module", version = "0.128.0" }
cranelift-interpreter = { path = "cranelift/interpreter", version = "0.128.0" }
cranelift-reader = { path = "cranelift/reader", version = "0.128.0" }
cranelift-filetests = { path = "cranelift/filetests" }
cranelift-object = { path = "cranelift/object", version = "0.128.0" }
cranelift-jit = { path = "cranelift/jit", version = "0.128.0" }
cranelift-fuzzgen = { path = "cranelift/fuzzgen" }
cranelift-bforest = { path = "cranelift/bforest", version = "0.128.0" }
cranelift-bitset = { path = "cranelift/bitset", version = "0.128.0" }
cranelift-control = { path = "cranelift/control", version = "0.128.0" }
cranelift-srcgen = { path = "cranelift/srcgen", version = "0.128.0" }
cranelift = { path = "cranelift/umbrella", version = "0.128.0" }

# Internal crates not published to crates.io used in testing, builds, etc
pulley-interpreter-fuzz = { path = 'pulley/fuzz' }

# Bytecode Alliance maintained dependencies:
# ---------------------------
regalloc2 = "0.13.3"
wasip1 = { version = "1.0.0", default-features = false }

# cap-std family:
target-lexicon = "0.13.0"
cap-std = "3.4.5"
cap-rand = { version = "3.4.5", features = ["small_rng"] }
cap-fs-ext = "3.4.5"
cap-net-ext = "3.4.5"
cap-time-ext = "3.4.5"
cap-tempfile = "3.4.5"
fs-set-times = "0.20.3"
system-interface = { version = "0.27.3", features = ["cap_std_impls"] }
io-lifetimes = { version = "2.0.3", default-features = false }
io-extras = "0.18.4"
rustix = "1.0.8"
# wit-bindgen:
wit-bindgen = { version = "0.50.0", default-features = false }
wit-bindgen-rust-macro = { version = "0.50.0", default-features = false }

# wasm-tools family:
wasmparser = { version = "0.243.0", default-features = false, features = ['simd'] }
wat = "1.243.0"
wast = "243.0.0"
wasmprinter = "0.243.0"
wasm-encoder = "0.243.0"
wasm-smith = "0.243.0"
wasm-mutate = "0.243.0"
wit-parser = "0.243.0"
wit-component = "0.243.0"
wasm-wave = "0.243.0"
wasm-compose = "0.243.0"
json-from-wast = "0.243.0"

# Non-Bytecode Alliance maintained dependencies:
# --------------------------
arbitrary = "1.4.2"
backtrace = "0.3.75"
mutatis = "0.3.2"
cc = "1.2.41"
object = { version = "0.37.3", default-features = false, features = ['read_core', 'elf'] }
gimli = { version = "0.32.3", default-features = false, features = ['read'] }
addr2line = { version = "0.25.1", default-features = false }
anyhow = { version = "1.0.100", default-features = false }
windows-sys = "0.61.2"
env_logger = "0.11.5"
log = { version = "0.4.28", default-features = false }
clap = { version = "4.5.48", default-features = false, features = ["std", "derive"] }
clap_complete = "4.5.58"
hashbrown = { version = "0.15", default-features = false }
capstone = "0.13.0"
smallvec = { version = "1.15.1", features = ["union"] }
tracing = "0.1.41"
bitflags = "2.9.4"
thiserror = "2.0.17"
async-trait = "0.1.89"
heck = "0.5"
similar = "2.7.0"
toml = "0.9.8"
mach2 = "0.4.2"
memfd = "0.6.5"
psm = "0.1.11"
proptest = "1.0.0"
rand = { version = "0.9.2", features = ["small_rng"] }
# serde and serde_derive must have the same version
serde = { version = "1.0.228", default-features = false, features = ['alloc'] }
serde_derive = "1.0.228"
serde_json = "1.0.80"
glob = "0.3.3"
libfuzzer-sys = "0.4.10"
walkdir = "2.5.0"
cfg-if = "1.0"
tempfile = "3.24.0"
filecheck = "0.5.0"
libc = { version = "0.2.177", default-features = true }
file-per-thread-logger = "0.2.0"
tokio = { version = "1.48.0", features = [ "rt", "time" ] }
hyper = "1.7.0"
http = "1.3.1"
http-body = "1.0.1"
http-body-util = "0.1.3"
bytes = { version = "1.10.1", default-features = false }
futures = { version = "0.3.31", default-features = false }
indexmap = { version = "2.11.4", default-features = false }
syn = "2.0.106"
quote = "1.0.41"
proc-macro2 = "1.0.101"
test-log = { version = "0.2.18", default-features = false, features = ["trace"] }
tracing-subscriber = { version = "0.3.20", default-features = false, features = ['fmt', 'env-filter', 'ansi', 'tracing-log'] }
url = "2.5.7"
postcard = { version = "1.1.3", default-features = false, features = ['alloc'] }
criterion = { version = "0.7.0", default-features = false, features = ["html_reports", "rayon"] }
rustc-hash = "2.1.1"
libtest-mimic = "0.8.1"
semver = { version = "1.0.27", default-features = false }
ittapi = "0.4.0"
libm = "0.2.15"
tokio-rustls = "0.25.0"
rustls = "0.22.0"
tokio-native-tls = "0.3.1"
native-tls = "0.2.11"
webpki-roots = "0.26.0"
itertools = "0.14.0"
base64 = "0.22.1"
termcolor = "1.4.1"
flate2 = "1.1.4"
tokio-util = "0.7.16"
arbtest = "0.3.2"
rayon = "1.11.0"
regex = "1.9.1"
pin-project-lite = "0.2.14"

[profile.profiling]
inherits = "bench"
debug = "line-tables-only"

[profile.fastest-runtime]
inherits = "release"
codegen-units = 1
lto = true
